--- a/public/i18n/en-US.json
+++ b/public/i18n/en-US.json
@@ -9,13 +9,10 @@
     "invoice": "Invoice",
     "staff": "Staff",
     "pet":"Pet",
+    "book-appointment": "Book an Appointment",
     "ratings": "FeedBack",
     "animals": "Animals",
-    "overview": "Overview",
     "client-home": "Home Page",
-    "menu.animals.pet": "Pet",
-    "menu.animals.horse": "Horse",
-    "menu.animals.adoption": "Adoption",
     "design": "Design",
     "design.colors": "Color System",
     "design.icons": "Material Icons",
@@ -82,11 +79,11 @@
     "utilities": "Utilities",
     "utilities.css-grid": "CSS Grid",
     "utilities.css-helpers": "CSS Helpers",
-    "menu-level": "Menu Level",
-    "menu-level.level-1-1": "Level 1.1",
-    "menu-level.level-1-2": "Level 1.2",
-    "menu-level.level-1-1.level-2-1": "Level 2.1",
-    "menu-level.level-1-1.level-2-2": "Level 2.2",
+    "menu-level": "Our Services",
+    "menu-level.level-1-1": "Dog Training",
+    "menu-level.level-1-2": "Dental Care",
+    "menu-level.level-2-1": "Internal Medicine",
+    "menu-level.level-2-2": "Groom Details",
     "menu-level.level-1-1.level-2-1.level-3-1": "Level 3.1",
     "menu-level.level-1-1.level-2-1.level-3-1.level-4-1": "Level 4.1",
     "permissions": "Permissions",
